<resources>
    <string name="app_name">Абитуриент МГТУ</string>
    <string name="bottom_title_1">ГЛАВНАЯ</string>
    <string name="bottom_title_2">КАТАЛОГ</string>
    <string name="bottom_title_3">СТАТИСТИКА</string>
    <string name="uni_name">МГТУ им. Н.Э. Баумана</string>
    <string name="main_header2">Приложение для абитуриентов</string>
    <string name="state_exam_points">Баллы ЕГЭ</string>
    <string name="current_step">Текущий шаг подачи документов</string>
    <string name="prev_step">Предыдущий шаг</string>
    <string name="next_step">Следующий шаг</string>
    <string name="current_contest">Текущий конкурс на Ваших направлениях</string>
    <string name="last_reload">Последнее обновление баллов:</string>
    <string name="welcome_header">Добро пожаловать!</string>
    <string name="welcome_command_1">Заполните информацию о себе</string>
    <string name="welcome_command_2">Выберите предметы ЕГЭ, указав результат экзамена</string>
    <string name="welcome_hint1">ФИО</string>
    <string name="welcome_hint2">Дата рождения</string>
    <string name="next_command">Далее</string>
    <string name="back_command">Назад</string>
    <string name="edit">Изменить</string>
    <string name="get_data">Получить данные</string>
    <string name="stats_screen_header">Динамика проходных баллов</string>
    <string name="stats_screen_checkbox_budget">Общий конкурс на бюджетные места</string>
    <string name="stats_screen_checkbox_target">Целевой приём</string>
    <string name="stats_screen_budget_label">Проходной балл на бюджетную форму обучения</string>
    <string name="stats_screen_target_label">Проходной балл на целевое обучение</string>
    <string name="stats_screen_no_data">Нет данных</string>
    <string name="stats_screen_description">Данные сайта bmstu.ru</string>
    <string name="alert_name">Введите имя пользователя</string>
    <string name="alert_date">Введите дату рождения</string>
    <string name="news">Новости</string>
    <string name="extracurricular_activities">Внеучебная деятельность</string>
    <string name="admission_process">Процесс поступления</string>
    <string name="buildings_and_hostels">Корпуса и общежития</string>
    <string name="faculties_and_departments">Факультеты и кафедры</string>
    <string name="about_application">О приложении</string>
    <string name="alert_ege">Результат ЕГЭ должен быть в пределах от 0 до 100</string>
    <string name="welcome_command_3">Выберите не более трех приоритетных направлений для поступления.
        \nВ любой момент вы сможете изменить свой выбор</string>
    <string name="alert_discipline_zero">Выберите хотя бы одно направление</string>
    <string name="alert_discipline_more">Вы не можете выбрать более трех направлений</string>
    <string name="no_discipline_match">Отсутствуют направления для выбранных предметов ЕГЭ</string>
    <string name="ege_results">Результаты ЕГЭ</string>
    <string-array name="disciplines">
        <item>01.03.02 Прикладная математика и информатика (Бакалавр)</item>
        <item>01.03.04 Прикладная математика (Бакалавр)</item>
        <item>02.03.01 Математика и компьютерные науки (Бакалавр)</item>
        <item>09.03.01 Информатика и вычислительная техника (Бакалавр)</item>
        <item>09.03.02 Информационные системы и технологии (Бакалавр)</item>
        <item>09.03.03 Прикладная информатика (Бакалавр)</item>
        <item>10.05.01 Компьютерная безопасность (Специалист)</item>
        <item>09.03.04 Программная инженерия (Бакалавр)</item>
        <item>10.05.03 Информационная безопасность автоматизированных систем (Специалист)</item>
        <item>11.03.03 Конструирование и технология электронных средств (Бакалавр)</item>
        <item>11.03.04 Электроника и наноэлектроника (Бакалавр)</item>
        <item>11.05.01 Радиоэлектронные системы и комплексы (Специалист)</item>
        <item>12.03.02 Оптотехника (Бакалавр)</item>
        <item>12.03.04 Биотехнические системы и технологии (Бакалавр)</item>
        <item>12.03.05 Лазерная техника и лазерные технологии (Бакалавр)</item>
        <item>12.05.01 Электронные и оптико-электронные приборы и системы специального назначения (Специалист)</item>
        <item>13.03.02 Электроэнергетика и электротехника (Бакалавр)</item>
        <item>13.03.03 Энергетическое машиностроение (Бакалавр)</item>
        <item>14.03.01 Ядерная энергетика и теплофизика (Бакалавр)</item>
        <item>14.05.01 Ядерные реакторы и материалы (Специалист)</item>
        <item>15.03.01 Машиностроение (Бакалавр)</item>
        <item>15.03.02 Технологические машины и оборудование (Бакалавр)</item>
        <item>15.03.03 Прикладная механика (Бакалавр)</item>
        <item>15.03.04 Автоматизация технологических процессов и производств (Бакалавр)</item>
        <item>15.03.06 Мехатроника и робототехника (Бакалавр)</item>
        <item>15.05.01 Проектирование технологических машин и комплексов (Специалист)</item>
        <item>16.03.01 Техническая физика (Бакалавр)</item>
        <item>16.03.02 Высокотехнологические плазменные и энергетические установки (Бакалавр)</item>
        <item>16.03.03 Холодильная, криогенная техника и системы жизнеобеспечения (Бакалавр)</item>
        <item>16.05.01 Специальные системы жизнеобеспечения (Специалист)</item>
        <item>17.05.01 Боеприпасы и взрыватели (Специалист)</item>
        <item>17.05.02 Стрелково-пушечное, артиллерийское и ракетное оружие (Специалист)</item>
        <item>20.03.01 Техносферная безопасность (Бакалавр)</item>
        <item>22.03.01 Материаловедение и технологии материалов (Бакалавр)</item>
        <item>23.05.01 Наземные транспортно-технологические средства (Специалист)</item>
        <item>23.05.02 Транспортные средства специального назначения (Специалист)</item>
        <item>24.03.01 Ракетные комплексы и космонавтика (Бакалавр)</item>
        <item>24.05.01 Проектирование, производство и эксплуатация ракет и ракетно-космических комплексов (Специалист)</item>
        <item>24.05.02 Проектирование авиационных и ракетных двигателей (Специалист)</item>
        <item>24.05.04 Навигационно-баллистическое обеспечение применения космической техники (Специалист)</item>
        <item>24.05.06 Системы управления летательными аппаратами (Специалист)</item>
        <item>27.03.01 Стандартизация и метрология (Бакалавр)</item>
        <item>27.03.04 Управление в технических системах (Бакалавр)</item>
        <item>27.03.05 Инноватика (Бакалавр)</item>
        <item>28.03.02 Наноинженерия (Бакалавр)</item>
        <item>38.03.05 Бизнес-информатика (Бакалавр)</item>
        <item>39.03.01 Социология (Бакалавр)</item>
        <item>40.05.03 Судебная экспертиза (Специалист)</item>
        <item>54.03.01 Дизайн (Бакалавр)</item>
    </string-array>
    <string name="ok">ок</string>
    <string name="no_pdf_viewer">Не удалось найти приложение для прочтения pdf файла</string>
    <string name="press_back_again">Нажмите Назад еще раз, чтобы выйти</string>
    <string name="placeholder_score">⠀⠀⠀</string>
    <string name="disciplines_alert">Вы не можете подать документы более чем на 3 направления</string>
    <string name="description_warning_catalog">CATALOG IMG</string>
    <string name="number_of_spec">09.03.01</string>
    <string name="category_of_study">Специалитет</string>
    <string name="res_ege">Результаты ЕГЭ</string>
    <string name="subject_icon">subject icon</string>
    <string name="name_subject">Fizika</string>
    <string name="logo_bmstu">LOGO BMSTU</string>
    <string name="update_inf">update information</string>
    <string name="download_contest">Download contest</string>
    <string name="no_connection">No connection</string>
    <string name="news_image">News image</string>
    <string name="open_doors">День открытых дверей</string>
    <string name="text_news">12 апреля в 12:00 пройдет прямая трансляция на сайте abiturient.bmstu.ru с Борисом Васильевичем Падалкиным первым проректором - проректором по учебной работе, на трансляции вы узнаете больше про МГТУ им. Н.Э. Баумана, про направления подготовки и правила приема 2020.</string>
    <string name="name_speciality">Математика прикладная информатика</string>
    <string name="loading_data">Loading data</string>
    <string name="title_activity_building">BuildingActivity</string>
    <string name="tab_text_campus">Корпуса</string>
    <string name="tab_text_hostel">Общежития</string>
    <string name="unable_to_load_data">Невозможно загрузить данные</string>
    <string name="unable_to_show_map">Невозможно показать на карте</string>
    <string name="unable_to_show_site">Сервис временно не доступен</string>
    <string name="dialog_ok">Ок</string>
    <string name="dialog_cancel">Закрыть</string>
    <string name="content_descr_bmstu_img">Изображение университета</string>
    <string name="content_descr_vk_img">Вконтакте</string>
    <string name="content_descr_instagram_img">Инстаграм</string>
    <string name="useful_links">Полезные ссылки</string>
    <string name="social_links">Социальные сети</string>
    <string name="about_university">Об университете</string>
    <string name="university_description">
        ⠀⠀МГТУ им. Н. Э. Баумана - ведущий российский вуз,
        который на протяжении более чем 185-летней своей истории выпустил выдающихся
        ученых и исследователей, ставших пионерами мировой ракетной техники, авиации и
        тяжелой промышленности.
        \n⠀⠀МГТУ показан в ряде рейтингов QS. Заняв 299-е место в рейтинге QS World University
        Rankings ® 2017/18, МГТУ им. Н. Э. Баумана лидирует в ряде технологических областей,
        отраженных в рейтинге QS World University Rankings by Subject 2018, включая компьютерные
        науки и информационные системы, электрическую и электронную инженерию, машиностроение, математику,
        физику и астрономию.
        \n⠀⠀Если вы мечтаете заняться исследовательской деятельностью в таких перспективных отраслях
        науки как наноинженерия, обеспечить обществу информационную безопасность, готовы овладеть
        сложнейшей техникой и новейшими технологиями, чтобы создавать новые материалы, видите себя
        конструктором космических кораблей, авиационной техники и мощных энергосистем, хотите
        получить профессию, позволяющую разбираться во всех тонкостях электроники и
        микроэлектроники, стремитесь стать профессионалом в области высоких технологий управления
        наукоемкими производствами, занимаете активную жизненную позицию, готовы думать о будущем
        общества, оттачивать свои лидерские качества, учиться работать в команде,
        легендарный Московский государственный технический университет имени Н. Э. Баумана ждет вас!
    </string>
    <string name="university_site">Сайт университета</string>
    <string name="qs_site">Рейтинг QS</string>
    <string name="user_info">Информация о поступающем</string>
    <string name="user_info_privacy">Эти данные используются исключительно в целях
        персонализации приложения, они не передаются сторонним сервисам и хранятся только на
        Вашем устройстве. Пользователь не обязан указывать свои реальные данные.</string>
    <string name="confirm_changes">Подтвердить изменения</string>
    <string name="why_inf">Зачем вам эта информация?</string>
    <string name="about_passing_score">Что означают эти цифры?⠀</string>
    <string name="passing_score">Проходной балл</string>
    <string name="it_is_important">Это важно!</string>
    <string name="hostel_info">Место в общежитии предоставляется на конкурсной основе!
    \nЛица, которые нуждаются в общежитии и набрали балл, достаточный
    для зачисления на образовательную программу, но не достаточный
    для предоставления общежития, будут зачисляться без
    предоставления общежития.
    \nНа факультетах ИБМ, ФН, Л, АК, ПС, РКТ, РТ, ОЭП, СГН и ЮР общежитий нет!</string>
    <string name="do_not_show_again">Больше не показывать</string>
</resources>