<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:cardCornerRadius="@dimen/default_cornerRadius"
        android:id="@+id/info_hostel_card"
        android:visibility="gone"
        >

        <RelativeLayout
            android:layout_margin="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/important_text"
            android:text="@string/it_is_important"
            android:fontFamily="@font/roboto_bold"
            />
        <TextView
            android:layout_below="@id/important_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/hostel_info"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/info_hostel_text"
            />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/info_hostel_text"
             android:text="@string/ok"
             android:layout_alignEnd="@id/info_hostel_text"
             android:id="@+id/button_ok"
             />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_not_show_again"
                android:layout_below="@id/info_hostel_text"
                android:layout_toStartOf="@id/button_ok"
                android:checked="false"
                android:id="@+id/do_not_show"
            />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/placeholder_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>