<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

   >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/res_ege"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/ege_dialog_recyclerview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/ege_dialog_cancel"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ok"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/ege_dialog_ok"
            android:gravity="center"
            />


    </LinearLayout>


</LinearLayout>



